// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<CAspectRatio /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-aspect-ratio css-w9t1xc"
  >
    <img
      alt="img"
      src="https://bit.ly/naruto-sage"
    />
  </div>
</DocumentFragment>
`;

exports[`<CBadge /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-badge css-1f1oimr"
  >
    this is a badge
  </div>
</DocumentFragment>
`;

exports[`<CBox /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-box css-2sy3sl"
  >
     This is a div 
  </div>
  <section
    class="chakra-box css-2sy3sl"
  >
     This is a box with as="section" 
  </section>
</DocumentFragment>
`;

exports[`<CCenter /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-center css-40w18w"
  >
     C 
  </div>
</DocumentFragment>
`;

exports[`<CContainer /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-container css-1v8lbpd"
  >
     container 
  </div>
</DocumentFragment>
`;

exports[`<CDivider /> should render properly 1`] = `
<DocumentFragment>
  <hr
    aria-orientation="horizontal"
    class="chakra-divider css-1y71u2e"
  />
  <div
    class="chakra-center css-1yj0ggl"
  >
    <hr
      aria-orientation="vertical"
      class="chakra-divider css-1psxsf8"
    />
  </div>
</DocumentFragment>
`;

exports[`<CGrid /> & <CGridItem /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-grid css-ssvt16"
  >
    <div
      class="chakra-box css-62u0by"
    />
    <div
      class="chakra-box css-62u0by"
    />
    <div
      class="chakra-box css-62u0by"
    />
    <div
      class="chakra-box css-62u0by"
    />
    <div
      class="chakra-box css-62u0by"
    />
  </div>
  <div
    class="chakra-grid css-85u0uj"
  >
    <div
      class="chakra-grid__item css-1q1m6d7"
    />
    <div
      class="chakra-grid__item css-1qvc0pb"
    />
    <div
      class="chakra-grid__item css-1qvc0pb"
    />
    <div
      class="chakra-grid__item css-1anmq07"
    />
  </div>
</DocumentFragment>
`;

exports[`<CLink /> should render properly 1`] = `
<DocumentFragment>
  <a
    class="chakra-link css-xisxf"
  >
    CLink
  </a>
  <a
    class="chakra-link css-xisxf"
    rel="noopener noreferrer"
    target="_blank"
  >
    CLink external
  </a>
</DocumentFragment>
`;

exports[`<CSquare /> & <CCircle /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-square css-yh3vrj"
  >
     S 
  </div>
  <div
    class="chakra-circle css-1afsfyy"
  >
     C 
  </div>
</DocumentFragment>
`;

exports[`<CStack /> should render properly 1`] = `
<DocumentFragment>
  <div
    class="chakra-stack css-x9juev"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="chakra-stack-horizontal css-84zodg"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
  <div
    class="chakra-stack-vertical css-owjkmg"
  >
    <div>
      1
    </div>
    <div>
      2
    </div>
  </div>
</DocumentFragment>
`;
